WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189094
ASSERTION FAILED: cache under WebCore::AXObjectCache::postTextStateChangePlatformNotification
https://bugs.webkit.org/show_bug.cgi?id=189094
Summary
ASSERTION FAILED: cache under WebCore::AXObjectCache::postTextStateChangePlat...
Ryan Haddad
Reported
2018-08-29 12:43:13 PDT
The following assertion failure is seen attributed to layout test accessibility/mac/focus-setting-selection-syncronizing-not-clearing.html:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Fmac%2Ffocus-setting-selection-syncronizing-not-clearing.html
ASSERTION FAILED: cache /Volumes/Data/slave/highsierra-debug/build/Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm(711) : id textMarkerForVisiblePosition(WebCore::AXObjectCache *, const WebCore::VisiblePosition &) 1 0x4b8953e09 WTFCrash 2 0x4a800ba7b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x4ab975231 textMarkerForVisiblePosition(WebCore::AXObjectCache*, WebCore::VisiblePosition const&) 4 0x4ab976681 textMarkerRangeFromVisiblePositions(WebCore::AXObjectCache*, WebCore::VisiblePosition const&, WebCore::VisiblePosition const&) 5 0x4ab976656 -[WebAccessibilityObjectWrapper textMarkerRangeFromVisiblePositions:endPosition:] 6 0x4a83ee416 WebCore::AXObjectCache::postTextStateChangePlatformNotification(WebCore::AccessibilityObject*, WebCore::AXTextStateChangeIntent const&, WebCore::VisibleSelection const&) 7 0x4a990f6b4 WebCore::AXObjectCache::postTextStateChangeNotification(WebCore::AccessibilityObject*, WebCore::AXTextStateChangeIntent const&, WebCore::VisibleSelection const&) 8 0x4a990f84c WebCore::AXObjectCache::postTextStateChangeNotification(WebCore::Position const&, WebCore::AXTextStateChangeIntent const&, WebCore::VisibleSelection const&) 9 0x4a84e1349 WebCore::FrameSelection::notifyAccessibilityForSelectionChange(WebCore::AXTextStateChangeIntent const&) 10 0x4aa1dcc42 WebCore::FrameSelection::updateAndRevealSelection(WebCore::AXTextStateChangeIntent const&) 11 0x4aa1da9ae WebCore::FrameSelection::setSelection(WebCore::VisibleSelection const&, WTF::OptionSet<WebCore::FrameSelection::SetSelectionOption>, WebCore::AXTextStateChangeIntent, WebCore::FrameSelection::CursorAlignOnScroll, WebCore::TextGranularity) 12 0x4aa20c566 WebCore::SetSelectionCommand::doApply() 13 0x4aa17c1bf WebCore::CompositeEditCommand::applyCommandToComposite(WTF::Ref<WebCore::EditCommand, WTF::DumbPtrTraits<WebCore::EditCommand> >&&) 14 0x4aa210254 WebCore::SpellingCorrectionCommand::doApply() 15 0x4aa16790c WebCore::CompositeEditCommand::apply() 16 0x4aa167352 WebCore::AlternativeTextController::applyAlternativeTextToRange(WebCore::Range const&, WTF::String const&, WebCore::AlternativeTextType, WTF::OptionSet<WebCore::DocumentMarker::MarkerType>) 17 0x4aa166813 WebCore::AlternativeTextController::handleAlternativeTextUIResult(WTF::String const&) 18 0x4aa1bf60c WebCore::Editor::handleAlternativeTextUIResult(WTF::String const&) 19 0x10ba32b39 WebKit::WebPage::handleAlternativeTextUIResult(WTF::String const&) 20 0x10ba94a1a void IPC::callMemberFunctionImpl<WebKit::WebPage, void (WebKit::WebPage::*)(WTF::String const&), std::__1::tuple<WTF::String>, 0ul>(WebKit::WebPage*, void (WebKit::WebPage::*)(WTF::String const&), std::__1::tuple<WTF::String>&&, std::__1::integer_sequence<unsigned long, 0ul>) 21 0x10ba94970 void IPC::callMemberFunction<WebKit::WebPage, void (WebKit::WebPage::*)(WTF::String const&), std::__1::tuple<WTF::String>, std::__1::integer_sequence<unsigned long, 0ul> >(std::__1::tuple<WTF::String>&&, WebKit::WebPage*, void (WebKit::WebPage::*)(WTF::String const&)) 22 0x10ba8d0a3 void IPC::handleMessage<Messages::WebPage::HandleAlternativeTextUIResult, WebKit::WebPage, void (WebKit::WebPage::*)(WTF::String const&)>(IPC::Decoder&, WebKit::WebPage*, void (WebKit::WebPage::*)(WTF::String const&)) 23 0x10ba7f1e2 WebKit::WebPage::didReceiveWebPageMessage(IPC::Connection&, IPC::Decoder&) 24 0x10ba2f83e WebKit::WebPage::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 25 0x10ab920fa IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 26 0x10b61156d WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 27 0x10ab4f85a IPC::Connection::dispatchMessage(IPC::Decoder&) 28 0x10ab424e1 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 29 0x10ab503d7 IPC::Connection::dispatchOneIncomingMessage() 30 0x10ab6c878 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 31 0x10ab6c789 WTF::Function<void ()>::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14>::call() LEAK: 2 WebPageProxy
Attachments
Crash log
(84.48 KB, text/plain)
2018-08-29 12:44 PDT
,
Ryan Haddad
no flags
Details
patch
(4.63 KB, patch)
2019-01-27 22:48 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-08-29 12:43:32 PDT
<
rdar://problem/43853526
>
Ryan Haddad
Comment 2
2018-08-29 12:44:54 PDT
Created
attachment 348423
[details]
Crash log
Matt Lewis
Comment 3
2018-09-24 16:39:31 PDT
Skipped on High Sierra+ in:
https://trac.webkit.org/changeset/236442/webkit
Ryan Haddad
Comment 4
2018-09-25 09:59:25 PDT
***
Bug 189950
has been marked as a duplicate of this bug. ***
chris fleizach
Comment 5
2019-01-27 22:48:07 PST
Created
attachment 360320
[details]
patch
chris fleizach
Comment 6
2019-01-28 09:13:20 PST
@zalan - can you review?
WebKit Commit Bot
Comment 7
2019-01-31 01:55:39 PST
Comment on
attachment 360320
[details]
patch Clearing flags on attachment: 360320 Committed
r240773
: <
https://trac.webkit.org/changeset/240773
>
WebKit Commit Bot
Comment 8
2019-01-31 01:55:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug