ASSERTION FAILED: cache under WebCore::AXObjectCache::postTextStateChangePlatformNotification https://bugs.webkit.org/show_bug.cgi?id=189094 <rdar://problem/43853526>

Reviewed by Zalan Bujtas.

Source/WebCore:

Protect against access to objects and cache's that can be removed while an object is still in memory.

Unskipped flaky tests on mac-wk2.

* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postTextStateChangePlatformNotification):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(textMarkerForVisiblePosition):
(textMarkerRangeFromVisiblePositions):

LayoutTests:

Unskip flaky test with crash resolved.

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/208554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240773 268f45cc-cd09-0410-ab3c-d52691b4dbfc